--- a/mt5/Dockerfile
+++ b/mt5/Dockerfile
@@ -18,9 +18,8 @@ RUN chmod +x /root/.wine/drive_c/fx/install_and_run_mt5ubuntu.sh
 COPY ./mt5/*.sh ./mt5/*.py /root/.wine/drive_c/fx/
 COPY ./mt5/supervisord.conf /etc/supervisor/conf.d/supervisord.conf
 
-# Replace IC Markets setup with Exness MetaTrader 5 setup file
-# Download the Exness MetaTrader 5 setup file if not already available
-COPY mt5/exness5setup.exe /root/.wine/drive_c/fx/
+# Download the Exness MetaTrader 5 setup file
+RUN wget https://download.metatrader.com/cdn/web/exness.technologies.ltd/mt5/exness5setup.exe -O /root/.wine/drive_c/fx/exness5setup.exe
 
 # Run the installation of MetaTrader 5 Exness
 RUN xvfb-run bash /root/.wine/drive_c/fx/install_and_run_mt5ubuntu.sh || true
